2011-10-26  Roland McGrath  <roland@hack.frob.com>

	[BZ #13349]
	* libio/Versions (GLIBC_2.0): Remove open_obstack_stream, which
	doesn't exist.
	* manual/stdio.texi (Obstack Streams): Node removed.

2011-10-26  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/ieee754/flt-32/e_j0f.c: Fix use of math_force_eval.
	* sysdeps/ieee754/dbl-64/s_round.c: Likewise.
	* sysdeps/ieee754/flt-32/s_roundf.c: Likewise.

	* math/math_private.h (math_force_eval): Allow non-addressable
	arguments.
	* sysdeps/i386/fpu/math_private.h (math_force_eval): Likewise.

2011-10-25  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/ieee754/dbl-64/e_rem_pio2.c: Comment everything out, the
	file is not needed.

	* sysdeps/x86_64/fpu/multiarch/e_asin.c: Support AVX variants.
	* sysdeps/x86_64/fpu/multiarch/e_atan2.c: Likewise.
	* sysdeps/x86_64/fpu/multiarch/e_exp.c: Likewise.
	* sysdeps/x86_64/fpu/multiarch/e_log.c: Likewise.
	* sysdeps/x86_64/fpu/multiarch/s_atan.c: Likewise.
	* sysdeps/x86_64/fpu/multiarch/s_sin.c: Likewise.
	* sysdeps/x86_64/fpu/multiarch/s_tan.c: Likewise.
	* sysdeps/x86_64/fpu/multiarch/Makefile: Fix some CFLAGS-* variables.
	Add AVX variants.
	* sysdeps/x86_64/fpu/multiarch/brandred-avx.c: New file.
	* sysdeps/x86_64/fpu/multiarch/doasin-avx.c: New file.
	* sysdeps/x86_64/fpu/multiarch/dosincos-avx.c: New file.
	* sysdeps/x86_64/fpu/multiarch/e_asin-avx.c: New file.
	* sysdeps/x86_64/fpu/multiarch/e_atan2-avx.c: New file.
	* sysdeps/x86_64/fpu/multiarch/e_exp-avx.c: New file.
	* sysdeps/x86_64/fpu/multiarch/e_log-avx.c: New file.
	* sysdeps/x86_64/fpu/multiarch/mpa-avx.c: New file.
	* sysdeps/x86_64/fpu/multiarch/mpatan-avx.c: New file.
	* sysdeps/x86_64/fpu/multiarch/mpatan2-avx.c: New file.
	* sysdeps/x86_64/fpu/multiarch/mpexp-avx.c: New file.
	* sysdeps/x86_64/fpu/multiarch/mplog-avx.c: New file.
	* sysdeps/x86_64/fpu/multiarch/mpsqrt-avx.c: New file.
	* sysdeps/x86_64/fpu/multiarch/mptan-avx.c: New file.
	* sysdeps/x86_64/fpu/multiarch/s_atan-avx.c: New file.